Fixed some of the alignment in the contact portion of the website, so it was more align with the 'Contact' header. fixed some of the margins in the body div. Put a couple of pictures in the images folder in hopes to put them or something similar in the background of the hero div.

--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,12 @@ li a:hover { background-color: #ed1c24; }
     display: grid;
     grid-template-columns: 50% 50%;
     background-color: #fff;
+    /* background-image: url('../images/house2.jpg');
+    background-repeat: no-repeat;
+    background-size: contain;
+    height: 400px;
+    align-self: flex-end; */
+    /* Don't know how to to implement this picture yet.... work in progress... */
 }
 
 #hero #heroPic {
@@ -153,19 +159,25 @@ li a:hover { background-color: #ed1c24; }
     color: inherit;
 }
 
+#phone #secureMessage {
+    grid-column: 1;
+    grid-row: 3;
+    justify-self: start;
+    align-self: flex-start;
+}
+
 #phone button {
-    grid-column: 2;
-    grid-row: 1 / span 2;
+    /* grid-column: 2;
+    grid-row: 1 / span 2; */
     width: 250px;
     height: 75px;
-    justify-self: center;
-    align-self: center;
+    /* justify-self: center;
+    align-self: center; */
     border-radius: 50px;
     border: none;
     background-color: #fff;
     font-size: 18px;
     cursor: pointer;
-
 }
 
 #body {
@@ -175,6 +187,11 @@ li a:hover { background-color: #ed1c24; }
     grid-template-rows: minmax(100px, 150px)repeat(4, 1fr);
     background-color: black;
     color: white;
+}
+
+#body ul {
+    list-style-type: square;
+    list-style-position: inside;
 }
 
 #body h2 {
@@ -213,9 +230,12 @@ li a:hover { background-color: #ed1c24; }
     grid-column: 1;
     grid-row: 1;
     font-size: 24px;
-    margin-left: 100px;
+    margin-bottom: 105px;
+    /* margin-left: 100px; */
     font-family: plexreg, sans-serif;
     text-decoration: underline;
+    justify-self: center;
+    align-self: center;
 }
 
 #body #picture1 {
@@ -230,6 +250,8 @@ li a:hover { background-color: #ed1c24; }
     font-family: plexreg, sans-serif;
     margin-top: 30px;
     margin-left: 100px;
+    justify-self: center;
+    align-self: center;
 }
 
 #RemodelDiv {
@@ -248,25 +270,31 @@ li a:hover { background-color: #ed1c24; }
     grid-column: 2;
     grid-row: 1;
     font-size: 24px;
-    margin-left: 100px;
-    margin-top: 20px;
+    /* margin-left: 100px;
+    margin-top: 20px; */
+    margin-bottom: 125px;
     font-family: plexreg, sans-serif;
     text-decoration: underline;
+    justify-self: center;
+    align-self: center;
 }
 
 #body #remodels {
     grid-column: 2;
     grid-row: 1;
-    margin-top: 20px;
+    /* margin-top: 20px; */
     font-family: plexreg, sans-serif;
-    margin-top: 50px;
-    margin-left: 100px;
+    /* margin-top: 50px; */
+    margin-left: 15px;
+    justify-self: center;
+    align-self: center;
 }
 
 #tubfaucet {
     grid-column: 1;
     grid-row: 1;
     height: 300px;
+    margin: auto;
 }
 
 #RepairDiv {
@@ -283,18 +311,24 @@ li a:hover { background-color: #ed1c24; }
     grid-row: 1;
     grid-column: 1;
     font-size: 24px;
-    margin-left: 50px;
-    margin-top: 20px;
+    /* margin-left: 50px;
+    margin-top: 20px; */
     font-family: plexreg, sans-serif;
     text-decoration: underline;
+    justify-self: center;
+    align-self: center;
+    margin-bottom: 125px;
 }
 
 #body #repairs {
     grid-column: 1;
     grid-row: 1;
     font-family: plexreg, sans-serif;
-    margin-top: 50px;
-    margin-left: 50px;
+    /* margin-top: 50px;
+    margin-left: 50px; */
+    justify-self: center;
+    align-self: center;
+    margin-right: 127px;
 }
 
 #body #wrenchpic {
@@ -319,18 +353,24 @@ li a:hover { background-color: #ed1c24; }
     grid-row: 1;
     grid-column: 2;
     font-size: 24px;
-    margin-left: 50px;
-    margin-top: 20px;
+    /* margin-left: 50px; */
+    /* margin-top: 20px; */
     font-family: plexreg, sans-serif;
     text-decoration: underline;
+    align-self: center;
+    justify-self: center;
+    margin-bottom: 225px;
 }
 
 #body #commercial {
     grid-row: 1;
     grid-column: 2;
     font-family: plexreg, sans-serif;
-    margin-top: 50px;
+    /* margin-top: 50px; */
     margin-left: 50px;
+    align-self: center;
+    justify-self: center;
+    margin-bottom: 130px;
 }
 
 #nobpic {
